# funcxxy

./: CMakeLists.txt  README.md
cmake/: RapidJSON-CMakeLists.txt.in  funcxxyConfig.cmake.in
example/: CMakeLists.txt
example/src/: main.cc
include/funcxxy/: curry.h  either.h  funcxxy.h  maybe.h  operators.h  validation.h
src/: funcxxy.cc
test/: CMakeLists.txt
test/src/: main.cc
